--- a/style.css
+++ b/style.css
@@ -28,3 +28,29 @@
         transform: rotate(360deg);
     }
 }
+
+/* 断点 */
+
+/* 默认隐藏 */
+.hidden-below-sm {
+    display: none;
+  }
+  /* 仅当屏幕宽度大于等于1024px时显示 */
+  @media (min-width: 1024px) {
+    .hidden-below-sm {
+      display: block;
+    }
+  }  
+
+
+/* 默认隐藏 */
+.visible-below-lg {
+    display: none;
+  }
+  
+  /* 屏幕宽度小于1024px时显示 */
+  @media (max-width: 1023px) {
+    .visible-below-lg {
+      display: block;
+    }
+  }
