--- a/output.css
+++ b/output.css
@@ -554,6 +554,14 @@ video {
   display: none;
 }
 
+:root {
+  --tw-rotate-x: 0;
+  --tw-rotate-y: 0;
+  --tw-translate-z: 0;
+  --tw-scale-z: 1;
+  --tw-rotate-3d: 0,0,0,0deg;
+}
+
 .fixed {
   position: fixed;
 }
@@ -608,6 +616,22 @@ video {
 
 .top-\[6px\] {
   top: 6px;
+}
+
+.right-\[5px\] {
+  right: 5px;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.top-\[11px\] {
+  top: 11px;
+}
+
+.right-\[11px\] {
+  right: 11px;
 }
 
 .z-0 {
@@ -802,6 +826,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-\[50px\] {
+  border-radius: 50px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -994,8 +1022,32 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.perspective-800 {
+  perspective: 800px;
+}
+
+.perspective-1600 {
+  perspective: 1600px;
+}
+
+.transform {
+  transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), var(--tw-translate-z)) rotateX(var(--tw-rotate-x)) rotateY(var(--tw-rotate-y)) rotateZ(var(--tw-rotate)) rotate3d(var(--tw-rotate-3d)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scale3d(var(--tw-scale-x),var(--tw-scale-y),var(--tw-scale-z)) !important;
+}
+
 .hover\:-translate-y-\[8px\]:hover {
   --tw-translate-y: -8px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1034,6 +1086,34 @@ video {
 .hover\:brightness-125:hover {
   --tw-brightness: brightness(1.25);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:rotate-y-30:hover {
+  --tw-rotate-y: 30deg;
+}
+
+.hover\:rotate-x-30:hover {
+  --tw-rotate-x: 30deg;
+}
+
+.hover\:rotate-y-\[20deg\]:hover {
+  --tw-rotate-y: 20deg;
+}
+
+.hover\:rotate-y-\[5deg\]:hover {
+  --tw-rotate-y: 5deg;
+}
+
+.hover\:rotate-x-\[5deg\]:hover {
+  --tw-rotate-x: 5deg;
+}
+
+.hover\:rotate-z-\[5deg\]:hover {
+  --tw-rotate: 5deg;
+}
+
+.hover\:rotate-y-\[-5deg\]:hover {
+  --tw-rotate-y: -5deg;
 }
 
 .group:hover .group-hover\:block {
