--- a/font.css
+++ b/font.css
@@ -58,6 +58,7 @@ body {
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(8px);
   /* 背景置灰 */
   justify-content: center;
   align-items: flex-start;
@@ -66,7 +67,7 @@ body {
   /* 确保在最上层 */
   overflow-y: auto;
   /* 允许垂直滚动 */
-  padding-top: 64px;
+  padding-top: 96px;
   /* 顶部留出400px间隙 */
   padding-bottom: 128px;
   /* 顶部留出400px间隙 */
